ply-3.11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEMICOLON

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression EXPONENT expression
Rule 2     term -> expression TIMES expression
Rule 3     term -> expression DIVIDE expression
Rule 4     expression -> expression INTDIV expression
Rule 5     expression -> expression MOD expression
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression IN expression
Rule 9     expression -> expression CONCAT expression
Rule 10    expression -> NOT expression
Rule 11    expression -> expression ANDALSO expression
Rule 12    expression -> expression ORELSE expression
Rule 13    expression -> expression LT expression
Rule 14    expression -> expression LE expression
Rule 15    expression -> expression EQUAL expression
Rule 16    expression -> expression NOTEQUAL expression
Rule 17    expression -> expression GE expression
Rule 18    expression -> expression GT expression
Rule 19    factor -> LPAREN expression RPAREN
Rule 20    expression -> LBRACKET list_inside RBRACKET
Rule 21    list_inside -> expression COMMA list_inside
Rule 22    list_inside -> expression
Rule 23    list_inside -> <empty>
Rule 24    expression -> expression LBRACKET expression RBRACKET
Rule 25    expression -> LPAREN tupleinside RPAREN
Rule 26    tupleinside -> expression COMMA tupleinside
Rule 27    tupleinside -> expression
Rule 28    tupleinside -> <empty>
Rule 29    expression -> TUPLE_INDEX expression LPAREN expression RPAREN
Rule 30    expression -> term
Rule 31    term -> factor
Rule 32    factor -> NUMBER
Rule 33    factor -> BOOLEAN
Rule 34    term -> STRING

Terminals, with rules where they appear

ANDALSO              : 11
BOOLEAN              : 33
COMMA                : 21 26
CONCAT               : 9
DIVIDE               : 3
EQUAL                : 15
EXPONENT             : 1
GE                   : 17
GT                   : 18
IN                   : 8
INTDIV               : 4
LBRACKET             : 20 24
LE                   : 14
LPAREN               : 19 25 29
LT                   : 13
MINUS                : 7
MOD                  : 5
NOT                  : 10
NOTEQUAL             : 16
NUMBER               : 32
ORELSE               : 12
PLUS                 : 6
RBRACKET             : 20 24
RPAREN               : 19 25 29
SEMICOLON            : 
STRING               : 34
TIMES                : 2
TUPLE_INDEX          : 29
error                : 

Nonterminals, with rules where they appear

expression           : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 21 22 24 24 26 27 29 29 0
factor               : 31
list_inside          : 20 21
term                 : 30
tupleinside          : 25 26

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10

    expression                     shift and go to state 1
    term                           shift and go to state 6
    factor                         shift and go to state 7

state 1

    (0) S' -> expression .
    (1) expression -> expression . EXPONENT expression
    (4) expression -> expression . INTDIV expression
    (5) expression -> expression . MOD expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . IN expression
    (9) expression -> expression . CONCAT expression
    (11) expression -> expression . ANDALSO expression
    (12) expression -> expression . ORELSE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQUAL expression
    (16) expression -> expression . NOTEQUAL expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . GT expression
    (24) expression -> expression . LBRACKET expression RBRACKET
    (2) term -> expression . TIMES expression
    (3) term -> expression . DIVIDE expression

    EXPONENT        shift and go to state 11
    INTDIV          shift and go to state 12
    MOD             shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    IN              shift and go to state 16
    CONCAT          shift and go to state 17
    ANDALSO         shift and go to state 18
    ORELSE          shift and go to state 19
    LT              shift and go to state 20
    LE              shift and go to state 21
    EQUAL           shift and go to state 22
    NOTEQUAL        shift and go to state 23
    GE              shift and go to state 24
    GT              shift and go to state 25
    LBRACKET        shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28


state 2

    (10) expression -> NOT . expression
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10

    expression                     shift and go to state 29
    term                           shift and go to state 6
    factor                         shift and go to state 7

state 3

    (20) expression -> LBRACKET . list_inside RBRACKET
    (21) list_inside -> . expression COMMA list_inside
    (22) list_inside -> . expression
    (23) list_inside -> .
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    RBRACKET        reduce using rule 23 (list_inside -> .)
    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10

    list_inside                    shift and go to state 30
    expression                     shift and go to state 31
    term                           shift and go to state 6
    factor                         shift and go to state 7

state 4

    (25) expression -> LPAREN . tupleinside RPAREN
    (19) factor -> LPAREN . expression RPAREN
    (26) tupleinside -> . expression COMMA tupleinside
    (27) tupleinside -> . expression
    (28) tupleinside -> .
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    RPAREN          reduce using rule 28 (tupleinside -> .)
    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10

    tupleinside                    shift and go to state 32
    expression                     shift and go to state 33
    term                           shift and go to state 6
    factor                         shift and go to state 7

state 5

    (29) expression -> TUPLE_INDEX . expression LPAREN expression RPAREN
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10

    expression                     shift and go to state 34
    term                           shift and go to state 6
    factor                         shift and go to state 7

state 6

    (30) expression -> term .

    EXPONENT        reduce using rule 30 (expression -> term .)
    INTDIV          reduce using rule 30 (expression -> term .)
    MOD             reduce using rule 30 (expression -> term .)
    PLUS            reduce using rule 30 (expression -> term .)
    MINUS           reduce using rule 30 (expression -> term .)
    IN              reduce using rule 30 (expression -> term .)
    CONCAT          reduce using rule 30 (expression -> term .)
    ANDALSO         reduce using rule 30 (expression -> term .)
    ORELSE          reduce using rule 30 (expression -> term .)
    LT              reduce using rule 30 (expression -> term .)
    LE              reduce using rule 30 (expression -> term .)
    EQUAL           reduce using rule 30 (expression -> term .)
    NOTEQUAL        reduce using rule 30 (expression -> term .)
    GE              reduce using rule 30 (expression -> term .)
    GT              reduce using rule 30 (expression -> term .)
    LBRACKET        reduce using rule 30 (expression -> term .)
    TIMES           reduce using rule 30 (expression -> term .)
    DIVIDE          reduce using rule 30 (expression -> term .)
    $end            reduce using rule 30 (expression -> term .)
    COMMA           reduce using rule 30 (expression -> term .)
    RBRACKET        reduce using rule 30 (expression -> term .)
    RPAREN          reduce using rule 30 (expression -> term .)
    LPAREN          reduce using rule 30 (expression -> term .)


state 7

    (31) term -> factor .

    EXPONENT        reduce using rule 31 (term -> factor .)
    INTDIV          reduce using rule 31 (term -> factor .)
    MOD             reduce using rule 31 (term -> factor .)
    PLUS            reduce using rule 31 (term -> factor .)
    MINUS           reduce using rule 31 (term -> factor .)
    IN              reduce using rule 31 (term -> factor .)
    CONCAT          reduce using rule 31 (term -> factor .)
    ANDALSO         reduce using rule 31 (term -> factor .)
    ORELSE          reduce using rule 31 (term -> factor .)
    LT              reduce using rule 31 (term -> factor .)
    LE              reduce using rule 31 (term -> factor .)
    EQUAL           reduce using rule 31 (term -> factor .)
    NOTEQUAL        reduce using rule 31 (term -> factor .)
    GE              reduce using rule 31 (term -> factor .)
    GT              reduce using rule 31 (term -> factor .)
    LBRACKET        reduce using rule 31 (term -> factor .)
    TIMES           reduce using rule 31 (term -> factor .)
    DIVIDE          reduce using rule 31 (term -> factor .)
    $end            reduce using rule 31 (term -> factor .)
    COMMA           reduce using rule 31 (term -> factor .)
    RBRACKET        reduce using rule 31 (term -> factor .)
    RPAREN          reduce using rule 31 (term -> factor .)
    LPAREN          reduce using rule 31 (term -> factor .)


state 8

    (34) term -> STRING .

    EXPONENT        reduce using rule 34 (term -> STRING .)
    INTDIV          reduce using rule 34 (term -> STRING .)
    MOD             reduce using rule 34 (term -> STRING .)
    PLUS            reduce using rule 34 (term -> STRING .)
    MINUS           reduce using rule 34 (term -> STRING .)
    IN              reduce using rule 34 (term -> STRING .)
    CONCAT          reduce using rule 34 (term -> STRING .)
    ANDALSO         reduce using rule 34 (term -> STRING .)
    ORELSE          reduce using rule 34 (term -> STRING .)
    LT              reduce using rule 34 (term -> STRING .)
    LE              reduce using rule 34 (term -> STRING .)
    EQUAL           reduce using rule 34 (term -> STRING .)
    NOTEQUAL        reduce using rule 34 (term -> STRING .)
    GE              reduce using rule 34 (term -> STRING .)
    GT              reduce using rule 34 (term -> STRING .)
    LBRACKET        reduce using rule 34 (term -> STRING .)
    TIMES           reduce using rule 34 (term -> STRING .)
    DIVIDE          reduce using rule 34 (term -> STRING .)
    $end            reduce using rule 34 (term -> STRING .)
    COMMA           reduce using rule 34 (term -> STRING .)
    RBRACKET        reduce using rule 34 (term -> STRING .)
    RPAREN          reduce using rule 34 (term -> STRING .)
    LPAREN          reduce using rule 34 (term -> STRING .)


state 9

    (32) factor -> NUMBER .

    EXPONENT        reduce using rule 32 (factor -> NUMBER .)
    INTDIV          reduce using rule 32 (factor -> NUMBER .)
    MOD             reduce using rule 32 (factor -> NUMBER .)
    PLUS            reduce using rule 32 (factor -> NUMBER .)
    MINUS           reduce using rule 32 (factor -> NUMBER .)
    IN              reduce using rule 32 (factor -> NUMBER .)
    CONCAT          reduce using rule 32 (factor -> NUMBER .)
    ANDALSO         reduce using rule 32 (factor -> NUMBER .)
    ORELSE          reduce using rule 32 (factor -> NUMBER .)
    LT              reduce using rule 32 (factor -> NUMBER .)
    LE              reduce using rule 32 (factor -> NUMBER .)
    EQUAL           reduce using rule 32 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 32 (factor -> NUMBER .)
    GE              reduce using rule 32 (factor -> NUMBER .)
    GT              reduce using rule 32 (factor -> NUMBER .)
    LBRACKET        reduce using rule 32 (factor -> NUMBER .)
    TIMES           reduce using rule 32 (factor -> NUMBER .)
    DIVIDE          reduce using rule 32 (factor -> NUMBER .)
    $end            reduce using rule 32 (factor -> NUMBER .)
    COMMA           reduce using rule 32 (factor -> NUMBER .)
    RBRACKET        reduce using rule 32 (factor -> NUMBER .)
    RPAREN          reduce using rule 32 (factor -> NUMBER .)
    LPAREN          reduce using rule 32 (factor -> NUMBER .)


state 10

    (33) factor -> BOOLEAN .

    EXPONENT        reduce using rule 33 (factor -> BOOLEAN .)
    INTDIV          reduce using rule 33 (factor -> BOOLEAN .)
    MOD             reduce using rule 33 (factor -> BOOLEAN .)
    PLUS            reduce using rule 33 (factor -> BOOLEAN .)
    MINUS           reduce using rule 33 (factor -> BOOLEAN .)
    IN              reduce using rule 33 (factor -> BOOLEAN .)
    CONCAT          reduce using rule 33 (factor -> BOOLEAN .)
    ANDALSO         reduce using rule 33 (factor -> BOOLEAN .)
    ORELSE          reduce using rule 33 (factor -> BOOLEAN .)
    LT              reduce using rule 33 (factor -> BOOLEAN .)
    LE              reduce using rule 33 (factor -> BOOLEAN .)
    EQUAL           reduce using rule 33 (factor -> BOOLEAN .)
    NOTEQUAL        reduce using rule 33 (factor -> BOOLEAN .)
    GE              reduce using rule 33 (factor -> BOOLEAN .)
    GT              reduce using rule 33 (factor -> BOOLEAN .)
    LBRACKET        reduce using rule 33 (factor -> BOOLEAN .)
    TIMES           reduce using rule 33 (factor -> BOOLEAN .)
    DIVIDE          reduce using rule 33 (factor -> BOOLEAN .)
    $end            reduce using rule 33 (factor -> BOOLEAN .)
    COMMA           reduce using rule 33 (factor -> BOOLEAN .)
    RBRACKET        reduce using rule 33 (factor -> BOOLEAN .)
    RPAREN          reduce using rule 33 (factor -> BOOLEAN .)
    LPAREN          reduce using rule 33 (factor -> BOOLEAN .)


state 11

    (1) expression -> expression EXPONENT . expression
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10

    expression                     shift and go to state 35
    term                           shift and go to state 6
    factor                         shift and go to state 7

state 12

    (4) expression -> expression INTDIV . expression
    (1) expression -> . expression EXPONENT expression
    (4) expression -> . expression INTDIV expression
    (5) expression -> . expression MOD expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression IN expression
    (9) expression -> . expression CONCAT expression
    (10) expression -> . NOT expression
    (11) expression -> . expression ANDALSO expression
    (12) expression -> . expression ORELSE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQUAL expression
    (16) expression -> . expression NOTEQUAL expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression GT expression
    (20) expression -> . LBRACKET list_inside RBRACKET
    (24) expression -> . expression LBRACKET expression RBRACKET
    (25) expression -> . LPAREN tupleinside RPAREN
    (29) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (30) expression -> . term
    (2) term -> . expression TIMES expression
    (3) term -> . expression DIVIDE expression
    (31) term -> . factor
    (34) term -> . STRING
    (19) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . BOOLEAN

    NOT             shift and go to state 2
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    STRING          shift and go to state 8
    NUMBER          shift and go to state 9
    BOOLEAN         shift and go to state 10
